# LibreFork

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum
cmd/librefork/: main.go  styles.go  ui.go
cmd/ui/: main.go  styles.go  ui.go
crates/librefork-core/: Cargo.toml
crates/librefork-core/src/: lib.rs
crates/librefork-ui/: Cargo.toml
crates/librefork-ui/src/: app.rs  main.rs  recents.rs  starred.rs  styles.css  widgets.rs
crates/librefork-ui/src/widgets/: commit_details.rs  commit_list.rs  home.rs  side_panel.rs
internal/core/: core.go  core_test.go  gitcmd.go
scripts/: install-deps.sh
