[workspace]
members = ["crates/librefork-core", "crates/librefork-ui"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"
authors = ["LibreFork Team"]

[workspace.dependencies]
git2 = "0.18"
anyhow = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }

# Aligner sur libadwaita 0.6
gtk4 = { version = "0.8", package = "gtk4" }
adw  = { version = "0.6", package = "libadwaita" }
glib = "0.20"
gio  = "0.20"
once_cell = "1"
