[package]
name = "librefork-ui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
librefork-core = { path = "../librefork-core" }
gtk4 = { workspace = true }
adw = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
